<resources>
    <string name="app_name">Pendu</string>

    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <!-- Accueil 2 Joueurs -->
    <string name="label_onglet1">Facile</string>
    <string name="label_onglet2">Normal</string>
    <string name="label_onglet3">Difficile</string>
    <string name="label_score">Votre score :</string>
    <string name="titre2Joueur">Mode 2 joueurs</string>
    <string name="nomJoueur1">Joueur 1 </string>
    <string name="nomJoueur2">Joueur 2 </string>
    <string name="nombreMots">Nombre de mots : </string>

    <!-- Pages difficultés -->
    <string name="titreDifficulte">Choisissez une difficulté</string>
    <string name="libelleFacile">Facile</string>
    <string name="libelleMoyen">Moyen</string>
    <string name="libelleDifficile">Difficile</string>

    <!-- Main Activity -->
    <string name="libelleButton1Joueur">1 Joueur</string>
    <string name="libelleButton2Joueur">2 Joueurs</string>
    <string name="libelleButtonParametres">Paramètres</string>
    <string name="libelleButtonHistorique">Historique</string>
    <string name="libelleAide">Aide</string>

    <!-- GestionCategories -->
    <string name="libelle_GestionCategorie">Gestion des catégories</string>

    <!-- GestionMots -->
    <string name="libelle_GestionMot">Gestion des mots</string>

    <!-- Menu contextuel categories -->
    <string name="libelle_menu_modifier_categories">Modifier</string>
    <string name="libelle_menu_supprimer_categories">Supprimer</string>

    <!-- Main categorie -->
    <string name="libelle_MainCategorie">Sélectionnez une catégorie</string>
    <string name="titreNom">Entrez votre nom!</string>
    <string name="boutonPositif">Ok </string>
    <string name="boutonNegatif">Annuler </string>
    <string name="texteSaisieNom">Veuillez entrez votre nom.</string>

    <string name="messageSansNom">Votre score ne sera pas enregistré</string>
    <string name="messageSansScore">Aucun joueur sélectionné</string>

    <!-- Boite de dialogue -->
    <string name="titre_boite_dialog_modification">Modification Catégorie</string>
    <string name="titre_boite_dialog_modification_Mot">Modification Mot</string>
    <string name="titre_boite_dialog_suppression">Suppression Catégorie</string>
    <string name="titre_boite_dialog_suppression_Mot">Suppression Mot</string>
    <string name="titre_boite_dialog_suppression_Scores">Suppression Scores</string>
    <string name="titre_boite_dialog_ajout">Ajout Catégorie</string>
    <string name="titre_boite_dialog_ajout_Mot">Ajout Mot</string>
    <string name="bouton_positif_Valider">Valider</string>
    <string name="bouton_negatif_Annuler">Annuler</string>
    <string name="modif_reussie">Modification effectuée</string>
    <string name="ajout_categorie">Ajouter la catégorie : </string>
    <string name="ajout_mot">Ajouter le mot : </string>

    <!-- Message d'avertissement via Toast -->
    <string name="message_saisie_non_complete">Veuillez compléter tous les champs pour pouvoir continuer</string>
    <string name="message_saisie_joueur">Veuillez saisir les noms des deux joueurs pour pouvoir continuer</string>
</resources>
