<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.valentin.apppendu.Activity.Accueil2Joueurs">

    <TextView
        android:id="@+id/titre2Joueurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre2Joueur"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/nomJoueur1"
        android:layout_width="match_parent"
        android:hint="@string/nomJoueur1"
        android:layout_height="wrap_content"
        android:layout_below="@id/titre2Joueurs"/>

    <EditText
        android:id="@+id/nomJoueur2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomJoueur2"
        android:layout_below="@+id/nomJoueur1"/>

    <TextView
        android:id="@+id/texteNombreMots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreMots"
        android:layout_below="@id/nomJoueur2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/tailleLibelle"/>

    <NumberPicker
        android:id="@+id/nombreMots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/texteNombreMots"
        />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_retour_blanc"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:onClick="pagePrecedente"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_suivant_blanc"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="pageSuivante"/>
</RelativeLayout>
