<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficultes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valentin.apppendu.Activity.Difficultes">

    <TextView
        android:layout_marginTop="@dimen/margeTopTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/tailleTitre"
        android:textStyle="bold"
        android:text="@string/titreDifficulte"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/imgMoyen"
        android:layout_width="@dimen/tailleImgEssai"
        android:layout_marginLeft="@dimen/margeImgGauche"
        android:layout_height="@dimen/tailleImgEssai"
        android:textStyle="bold"
        android:backgroundTint="@color/colorDarkGray"
        android:text="@string/libelleMoyen"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="clicDifficulte"/>


    <Button
        android:id="@+id/imgFacile"
        android:layout_width="@dimen/tailleImgEssai"
        android:layout_height="@dimen/tailleImgEssai"
        android:textStyle="bold"
        android:backgroundTint="@color/colorGreen"
        android:layout_toLeftOf="@id/imgMoyen"
        android:text="@string/libelleFacile"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:onClick="clicDifficulte" />


    <Button
        android:id="@+id/imgDifficile"
        android:textStyle="bold"
        android:backgroundTint="@color/colorRed"
        android:text="@string/libelleDifficile"
        android:textColor="@color/colorWhite"
        android:layout_width="@dimen/tailleImgEssai"
        android:layout_height="@dimen/tailleImgEssai"
        android:layout_marginLeft="@dimen/margeImgGauche"
        android:layout_toRightOf="@id/imgMoyen"
        android:layout_centerVertical="true"
        android:onClick="clicDifficulte"/>

    <ImageButton
        android:id="@+id/imgPrecedent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_retour_blanc"
        android:backgroundTint="@color/colorPrimary"
        android:layout_centerVertical="true"
        android:onClick="clicPrecedent"/>


</RelativeLayout>
