<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valentin.apppendu.Activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button1Joueur"
        android:layout_centerHorizontal="true"
        android:src="@drawable/background"
        android:id="@+id/imageViewPendu" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophy_variant_yellow"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/imageButtonScores"
        android:onClick="voirScore"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_aide"
        android:background="@null"
        android:id="@+id/imageButtonAide"
        android:onClick="pageAide" />

    <Button
        android:text="@string/libelleButton1Joueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/button2Joueurs"
        android:id="@+id/button1Joueur"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:drawableEnd="@drawable/ic_un_joueur"
        android:onClick="choixCategorie"/>

    <Button
        android:text="@string/libelleButton2Joueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/buttonParametres"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/ic_deux_joueurs"
        android:layout_centerHorizontal="true"
        android:id="@+id/button2Joueurs"
        android:onClick="page2Joueur" />

    <Button
        android:text="@string/libelleButtonParametres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonParametres"
        android:backgroundTint="@color/colorDarkGray"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:drawableEnd="@drawable/ic_param"
        android:drawablePadding="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:onClick="parametres"/>

    <Button
        android:text="@string/libelleButtonHistorique"
        android:layout_width="match_parent"
        android:backgroundTint="@color/colorDarkGray"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonHistorique"
        android:layout_toRightOf="@id/buttonParametres"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_historique"
        android:onClick="historique"/>

</RelativeLayout>
